[project]
name = "meile-outlet-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Robin Kennedy-Reid", email = "github@orbit.mozmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
meile-outlet-checker = "meile_outlet_checker:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
